# composeit

./: .editorconfig  .gitignore  COMPOSE.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
composeit/: client.py  compose.py  graph.py  log_utils.py  main.py  process.py  server.py  service_config.py  utils.py  web_utils.py
composeit/dotenv/: ABOUT.md  __init__.py  main.py  parser.py  variables.py
composeit/tests/: test_graph.py
examples/: README.md
examples/unios/: .env  README.md  composeit.yml
examples/win/: .env  composeit.yml
examples/win2/: composeit.yml
examples/win3/: composeit.yml
test/: composeit.yml
test/linux/: composeit.yml
test/win/: composeit.yml
test/win2/: composeit.yml
test/win4/: composeit.yml
tests/: test_projects.py
tests/integration/: counter.py  diehard.py  echo.py  test_build.py  test_codes.py  test_config.py  test_depends_on.py  test_detach.py  test_environment.py  test_images.py  test_input.py  test_kill.py  test_merges.py  test_profiles.py  test_projects.py  test_reload.py  test_restarts.py  test_version.py  test_wait.py  utils.py
tests/integration/projects/build_env/: composeit.yml
tests/integration/projects/codes/: composeit.yml
tests/integration/projects/config/: composeit.yml
tests/integration/projects/depends_on/: composeit.yml
tests/integration/projects/expansions/: .env  composeit.yml
tests/integration/projects/input/: composeit.yml
tests/integration/projects/merge/: env.yml  env_list.yml  env_map.yml  s1.yml  s2.yml
tests/integration/projects/profiles/: composeit.yml
tests/integration/projects/restarts/: composeit.yml
tests/integration/projects/simple/: composeit.yml
tests/integration/projects/stopping/: composeit.yml
tests/projects/simple/: composeit.yml
tests/ut/: test_duration.py  test_graph.py  test_service_config.py  test_update_dict.py
tests/ut_dotenv/: conftest.py  test_main.py  test_parser.py  test_variables.py  test_zip_imports.py  utils.py
tests_integration/: counter.py  test_projects.py
tests_integration/projects/input/: composeit.yml
