[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "composeit"
version = "0.0.1"
authors = [
    {name = "Błażej Kramarski", email = "b.kramarski@gmail.com"},
]
description = "Process composer mimicking docker-compose"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["compose", "process"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyyaml",
    "termcolor",
    "aiohttp",
    "psutil",
    #"python-dotenv",
    "python-dotenv @ git+https://github.com/Bajron/python-dotenv.git@v1.1.0",
]
[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "mypy",
    "types-PyYAML",
    "types-psutil",
]
#dynamic = ["version"]

[project.scripts]
composeit = "composeit.main:main"

[tool.black]
line-length = 100
