[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "composeit"
version = "0.0.1"
authors = [{ name = "Błażej Kramarski", email = "b.kramarski@gmail.com" }]
description = "Process composer mimicking docker-compose"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["compose", "process"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml",
    "termcolor",
    "aiohttp",
    "psutil",
]
[project.optional-dependencies]
dev = ["black", "pytest", "pytest-cov", "mypy", "types-PyYAML", "types-psutil"]
#dynamic = ["version"]

[project.scripts]
composeit = "composeit.main:main"

[tool.black]
line-length = 100

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true # TODO: Improve on this some day

[tool.pytest.ini_options]
addopts = "--cov=composeit --cov-report html --cov-report term"

[tool.coverage.paths]
source = ["../composeit", "composeit", "*/site-packages/composeit"]

[tool.coverage.run]
patch = ["subprocess"]
parallel = true
source = ["../composeit", "composeit", "."]
concurrency = ["multiprocessing"]

[tool.coverage.report]
show_missing = true
